<resources>
    <string name="app_name">FitFusion</string>
    <string name="fit_fusion_logo">Fit Fusion Logo</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="introduction_screen_motivation_quote">\"Strive for progress, not perfection.\"</string>
    <string name="enter_details_sign_up">Please enter the following details to sign up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_details_sign_in">Please enter the following details to sign in</string>
    <string name="field_cannot_be_left_empty">Field cannot be left empty</string>
    <string name="please_enter_your_personal_details">Please enter your personal details</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="age">Age</string>
    <string name="height_in_cm">Height (in cm)</string>
    <string name="weight_in_kg">Weight (in kg)</string>
    <string name="submit">SUBMIT</string>
    <string name="food_log">Food log</string>
    <string name="user_image">user_image</string>
    <string name="user_name">User Name</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="food_name">Food Name</string>
    <string name="_12_00_00">12:00:00</string>
    <string name="calories_1200">Calories: 1200</string>
    <string name="protein_20g">Protein: 20g</string>
    <string name="fats_10g">Fats: 10g</string>
    <string name="carbs_30g">Carbs: 30g</string>
</resources>