<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/food_name"
        android:width="8dp"
        android:layout_margin="5dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="tv_time_stamp"/>

    <TextView
        android:id="@+id/tv_time_stamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/_12_00_00"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories_1200"
            android:layout_marginTop="28dp"
            android:layout_marginStart="5dp"
            android:textSize="13sp"
            />

        <TextView
            android:id="@+id/tv_protein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protein_20g"
            android:layout_marginTop="28dp"
            android:layout_marginStart="10dp"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/tv_fats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fats_10g"
            android:layout_marginTop="28dp"
            android:layout_marginStart="10dp"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/tv_carbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carbs_30g"
            android:layout_marginTop="28dp"
            android:layout_marginStart="10dp"
            android:textSize="13sp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>