<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/ic_survey_form_background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_personal_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="Personal Details"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_personal_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tb_personal_details"
        android:text="@string/please_enter_your_personal_details"
        android:textSize="22sp"
        android:padding="15dp"
        android:textColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_personal_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="30dp"
        android:padding="10dp"
        android:layout_margin="15dp"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp" >

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="19sp"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/rb_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:textColor="@color/black"/>

            </RadioGroup>

            <EditText
                android:id="@+id/et_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:textColorHint="@color/light_gray"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:inputType="number"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/et_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height_in_cm"
                android:textColorHint="@color/light_gray"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:inputType="numberDecimal"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/et_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_in_kg"
                android:textColorHint="@color/light_gray"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:inputType="numberDecimal"
                android:importantForAutofill="no" />

            <FrameLayout
                android:id="@+id/fl_submit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/sign_up_ripple_effect">

                <TextView
                    android:id="@+id/et_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:textColor="@color/white"/>

            </FrameLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>