<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/variant7"
    tools:context=".activities.IntroActivity">

    <ImageView
        android:id="@+id/iv_intro_image"
        android:layout_width="@dimen/introduction_image_size"
        android:layout_height="@dimen/introduction_image_size"
        android:src="@drawable/ic_intro_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAccessibility="no" />

    <ImageView
        android:layout_width="@dimen/introduction_logo_size"
        android:layout_height="@dimen/introduction_logo_size"
        android:contentDescription="@string/fit_fusion_logo"
        android:padding="15dp"
        android:src="@drawable/ic_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_intro_image" />

    <TextView
        android:id="@+id/tv_commit_to_fitness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduction_screen_motivation_quote"
        android:textColor="@color/white"
        android:textSize="@dimen/sign_up_sign_in_text_size"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_intro_image"
        app:layout_constraintBottom_toTopOf="@id/fl_sign_in"
        android:layout_marginTop="@dimen/intro_screen_motivation_quote_margin"
        android:layout_marginBottom="@dimen/intro_screen_motivation_quote_margin"/>

    <FrameLayout
        android:id="@+id/fl_sign_in"
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_layout_sign_up_sign_in_height"
        android:background="@drawable/sign_in_ripple_effect"
        android:layout_marginHorizontal="@dimen/frame_layout_sign_up_sign_in_horizontal_margin"
        android:layout_marginBottom="@dimen/button_sign_in_bottom_margin"
        app:layout_constraintBottom_toTopOf="@id/fl_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="@dimen/sign_up_sign_in_text_size"
            android:textStyle="bold"
            />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_sign_up"
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_layout_sign_up_sign_in_height"
        android:background="@drawable/sign_up_ripple_effect"
        android:layout_marginHorizontal="@dimen/frame_layout_sign_up_sign_in_horizontal_margin"
        android:layout_marginBottom="@dimen/button_sign_up_bottom_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="@dimen/sign_up_sign_in_text_size"
            android:textStyle="bold"
            />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>